Ticket #2844: Fix styles broken in previous post

--- a/wat/style/components/_layout-details.scss
+++ b/wat/style/components/_layout-details.scss
@@ -82,8 +82,13 @@
         text-align: center;
 
         @include in(desktop) {
-            //display: none;
             width: auto;
+        }
+        
+        &.show-details-actions {
+            @include in(desktop) {
+                display: none;
+            }
         }
     }
     a.button {
