--- a/wat/style/style.css
+++ b/wat/style/style.css
@@ -1476,6 +1476,9 @@ body {
       @media screen and (min-width: 41em) {
         .wrapper .content .details-header a.button2 {
           width: auto; } }
+      @media screen and (min-width: 41em) {
+        .wrapper .content .details-header a.button2.show-details-actions {
+          display: none; } }
     @media only screen and (max-width: 41em) {
       .wrapper .content .details-header a.button {
         width: 100%;
